--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -8,6 +8,11 @@ http{
         access_log /var/log/nginx/access.log;
         root /var/www/html/public;
 
+        location / {
+            try_files $uri $uri/ /index.php?$query_string;
+            include /etc/nginx/mime.types;
+        }
+
         location ~ \.php$ {
             try_files $uri =404;
             fastcgi_split_path_info ^(.+\.php)(/.+)$;
@@ -16,10 +21,6 @@ http{
             include fastcgi_params;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
             fastcgi_param PATH_INFO $fastcgi_path_info;
-        }
-        
-        location / {
-            try_files $uri $uri/ /index.php?$query_string;
         }
     }
 }
